# ihc-badge-esp32

./: CMakeLists.txt  sdkconfig
Linux/: CMakeLists.txt  main.c
components/hwcontext/: component.mk
components/hwcontext/esp32/: hwcontext.c  wifimanager.c
components/hwcontext/esp32/include/: esp32hwcontext.h
components/hwcontext/include/: hwcontext.h  wifimanager.h
components/hwcontext/linux/: hwcontext.c  wifimanager.c
components/hwcontext/linux/include/: linuxwifimanager.h  sdlhwcontext.h
components/settings_app/: settings_main.c
components/shell/: CMakeLists.txt
components/ui/: painter.c
components/ui/include/: painter.h
components/wifi_app/: CMakeLists.txt  wifi_app.c  wifi_scan_app.c
main/: main.c
